// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-table Renders \`alarms-list-table\` with custom props 1`] = `
<div
  class="flex"
>
  <div>
    <div
      class="layout alarms-list-table__top-pagination px-4 position-relative row align-center"
      style="transform: translateY(0px); opacity: 1;"
    >
      <div
        class="flex alarms-list-table__top-pagination--left xs6"
      >
        <div
          class="layout row align-center justify-start"
        >
          <c-density-btn-toggle-stub
            value="1"
          />
          <!---->
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="alarms-list-table columns-sm"
    >
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table v-datatable--expand v-datatable--select-all v-datatable--dense theme--light"
        >
          <thead
            style="transform: translateY(0px); opacity: 1;"
          >
            <tr>
              <th>
                <div
                  class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="false"
                          role="checkbox"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="v-input--selection-controls__ripple"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          check_box_outline_blank
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                aria-label=""
                aria-sort="none"
                class="column sortable text-xs-left alarms-list-table__draggable-column"
                data-value="label"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag="tag"
                  />
                  <!---->
                  <!---->
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="2"
              >
                <transition-stub
                  name="fade-transition"
                >
                  <div
                    aria-valuemax="100"
                    aria-valuemin="0"
                    class="v-progress-linear"
                    role="progressbar"
                    style="height: 2px;"
                  >
                    <div
                      class="v-progress-linear__background primary"
                      style="height: 2px; opacity: 0.3; width: 100%;"
                    />
                    <div
                      class="v-progress-linear__bar"
                    >
                      <transition-stub
                        name="fade-transition"
                      >
                        <div
                          class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                        >
                          <div
                            class="v-progress-linear__bar__indeterminate long primary"
                          />
                          <div
                            class="v-progress-linear__bar__indeterminate short primary"
                          />
                        </div>
                      </transition-stub>
                      <transition-stub
                        name="slide-x-transition"
                      />
                    </div>
                  </div>
                </transition-stub>
              </th>
            </tr>
          </thead>
          <tbody>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object]"
              medium="true"
              parentalarm="[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectable="true"
              selectedtag="tag"
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="2"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object]"
              medium="true"
              parentalarm="[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectable="true"
              selectedtag="tag"
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="2"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object]"
              medium="true"
              parentalarm="[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectable="true"
              selectedtag="tag"
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="2"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object]"
              medium="true"
              parentalarm="[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectable="true"
              selectedtag="tag"
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="2"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object]"
              medium="true"
              parentalarm="[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectable="true"
              selectedtag="tag"
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="2"
                tag="td"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props 1`] = `
<div
  class="flex"
>
  <c-empty-data-table-columns-stub />
  <c-table-pagination-stub
    total-items="0"
  />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with compact mode 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="alarms-list-table columns-sm"
    >
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table theme--light"
        >
          <thead>
            <tr>
              <th
                aria-label=""
                aria-sort="none"
                class="column sortable text-xs-left alarms-list-table__draggable-column"
                data-value="label"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Actions: Not sorted."
                aria-sort="none"
                class="column text-xs-left alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <alarm-header-cell-stub
                  header="[object Object]"
                  selectedtag=""
                />
                <!---->
                <!---->
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="2"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-xs-center"
                colspan="2"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with ellipsis headers 1`] = `
<div class="flex" options="[object Object]">
  <div>
    <!---->
    <div class="alarms-list-table columns-sm">
      <div class="v-table__overflow">
        <table class="v-datatable v-table theme--light">
          <thead>
            <tr>
              <th role="columnheader" scope="col" aria-label="" data-value="label" aria-sort="none" tabindex="0" class="column sortable text-xs-left alarms-list-table__draggable-column">
                <div class="layout align-center">
                  <alarm-header-cell-stub header="[object Object]" selectedtag="" ellipsisheaders="true"></alarm-header-cell-stub>
                  <!---->
                  <!----><span><i aria-hidden="true" class="v-icon material-icons theme--light" style="font-size: 16px;">arrow_upward</i></span>
                </div>
              </th>
              <th role="columnheader" scope="col" aria-label="Actions: Not sorted." data-value="actions" aria-sort="none" class="column text-xs-left alarms-list-table__draggable-column">
                <alarm-header-cell-stub header="[object Object]" selectedtag="" ellipsisheaders="true"></alarm-header-cell-stub>
                <!---->
                <!---->
              </th>
            </tr>
            <tr class="v-datatable__progress">
              <th colspan="2" class="column"></th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td colspan="2" class="text-xs-center">No data available</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub></c-table-pagination-stub>
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with links column with links in row count 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="alarms-list-table columns-sm"
    >
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table theme--light"
        >
          <thead>
            <tr>
              <th
                aria-label=""
                aria-sort="none"
                class="column sortable text-xs-left alarms-list-table__draggable-column"
                data-value="links"
                role="columnheader"
                scope="col"
                tabindex="0"
                width="40px"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Actions: Not sorted."
                aria-sort="none"
                class="column text-xs-left alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <alarm-header-cell-stub
                  header="[object Object]"
                  selectedtag=""
                />
                <!---->
                <!---->
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="2"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-xs-center"
                colspan="2"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with simulate ctrl keydown with selectable = false 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="alarms-list-table columns-sm alarms-list-table__selecting"
    >
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table v-datatable--select-all theme--light"
        >
          <thead>
            <tr>
              <th>
                <div
                  class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details v-input--is-disabled theme--light"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="false"
                          disabled="disabled"
                          role="checkbox"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="v-input--selection-controls__ripple"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          check_box_outline_blank
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                aria-label=""
                aria-sort="none"
                class="column sortable text-xs-left alarms-list-table__draggable-column"
                data-value="label"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Actions: Not sorted."
                aria-sort="none"
                class="column text-xs-left alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <alarm-header-cell-stub
                  header="[object Object]"
                  selectedtag=""
                />
                <!---->
                <!---->
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="3"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-xs-center"
                colspan="3"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    total-items="0"
  />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with simulate ctrl keydown with selectable = true 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="alarms-list-table columns-sm alarms-list-table__selecting"
    >
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table v-datatable--select-all theme--light"
        >
          <thead>
            <tr>
              <th>
                <div
                  class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details v-input--is-disabled theme--light"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="false"
                          disabled="disabled"
                          role="checkbox"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="v-input--selection-controls__ripple"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          check_box_outline_blank
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                aria-label=""
                aria-sort="none"
                class="column sortable text-xs-left alarms-list-table__draggable-column"
                data-value="label"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Actions: Not sorted."
                aria-sort="none"
                class="column text-xs-left alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <alarm-header-cell-stub
                  header="[object Object]"
                  selectedtag=""
                />
                <!---->
                <!---->
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="3"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-xs-center"
                colspan="3"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    total-items="0"
  />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with expandable, but without selectable 1`] = `
<div
  class="flex"
>
  <div>
    <div
      class="layout alarms-list-table__top-pagination px-4 position-relative row align-center"
    >
      <div
        class="flex alarms-list-table__top-pagination--left xs6"
      >
        <div
          class="layout row align-center justify-start"
        >
          <!---->
          <transition-stub
            name="fade-transition"
          >
            <div
              class="flex px-1"
              style="display: none;"
            >
              <mass-actions-panel-stub
                items=""
                refreshalarmslist="[Function]"
                widget="[object Object]"
              />
            </div>
          </transition-stub>
        </div>
      </div>
      <div
        class="flex alarms-list-table__top-pagination--center-absolute xs4"
      >
        <c-pagination-stub
          total="5"
          type="top"
        />
      </div>
      <!---->
    </div>
    <div
      class="alarms-list-table columns-sm"
    >
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table v-datatable--expand theme--light"
        >
          <thead>
            <tr>
              <th
                aria-label=": Not sorted."
                aria-sort="none"
                class="column text-xs-left"
                data-value=""
                role="columnheader"
                scope="col"
                width="100"
              >
                <alarm-header-cell-stub
                  header="[object Object]"
                  selectedtag=""
                />
                <!---->
                <!---->
              </th>
              <th
                aria-label=""
                aria-sort="none"
                class="column sortable text-xs-left alarms-list-table__draggable-column"
                data-value="label"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Actions: Not sorted."
                aria-sort="none"
                class="column text-xs-left alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <alarm-header-cell-stub
                  header="[object Object]"
                  selectedtag=""
                />
                <!---->
                <!---->
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="3"
              />
            </tr>
          </thead>
          <tbody>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object],[object Object],[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectedtag=""
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="3"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object],[object Object],[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectedtag=""
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="3"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object],[object Object],[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectedtag=""
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="3"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object],[object Object],[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectedtag=""
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="3"
                tag="td"
              />
            </tr>
            <alarms-list-row-stub
              actionsinlinecount="4"
              alarm="[object Object]"
              columnsfilters=""
              expandable="true"
              headers="[object Object],[object Object],[object Object]"
              refreshalarmslist="[Function]"
              search=""
              selectedtag=""
              widget="[object Object]"
            />
            <tr
              class="v-datatable__expand-row"
            >
              <transition-group-stub
                class="v-datatable__expand-col"
                colspan="3"
                tag="td"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    total-items="5"
  />
  <!---->
</div>
`;
